set testing confing